--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -44,5 +44,8 @@ ion-img{
   
 }
 #mainText{
-  margin:0% 30% 10% 30%;
+  margin:13% 30% 00% 30%;
+  background-color: white;
+  padding:3%;
+  border-radius: 8%;
 }
