Formes et action selon le texte/ discussion v1.2

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,7 +30,7 @@
 
 <div id="mainText">{{actualText}}</div>
 <div id="buttonDiv">
-  <ion-button (click)="answerClick('oui')">Oui</ion-button>
-  <ion-button (click)="answerClick('non')">Non</ion-button>
-  <ion-button (click)="answerClick('jcp')">Je ne sais pas</ion-button>
+  <ion-button (click)="answerClick('oui')">{{yesButtonText}}</ion-button>
+  <ion-button (click)="answerClick('non')">{{noButtonText}}</ion-button>
+  <ion-button (click)="answerClick('jcp')">{{idkButtonText}}</ion-button>
 </div>
