--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
 
+<button class="noselect" routerLink="/askme"></button>
 <div class="decorum">
   <div *ngFor="let row of background" class="row">
     <div *ngFor="let tile of row">
