--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,3 +38,59 @@
   justify-content: center;
   margin-bottom: 4%;
 }
+
+.noselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+		-webkit-tap-highlight-color: transparent;
+}
+
+button, button:before {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+button {
+  position: absolute;
+	width: 150px;
+	height: 50px;
+	cursor: pointer;
+	font-family: 'Play', sans-serif;
+	font-size: 20px;
+	color: white;
+	border: none;
+	border-radius: 25px;
+	background-image: url("/assets/RandomPic/hazard-stripes-wallpaper.jpg");
+	background-size: 150%;
+	background-position: left;
+	transition: 1s;
+}
+
+button:before {
+	width: 150px;
+	height: 50px;
+	content: 'Story Creation';
+	background: rgba(0,0,0,0.6);
+	border-radius: 25px;
+	position: absolute;
+	transition: 500ms;
+}
+
+button:hover:before {
+	background: rgba(0,0,0,0);
+	text-shadow: 1px 1px 1px black;
+}
+
+button:hover {
+	background-position: center;
+	box-shadow: 0px 0px 10px rgba(232, 218, 26, 0.5);
+}
+
+button:focus {
+	outline: none;
+}
