--- a/src/app/askme/askme.page.scss
+++ b/src/app/askme/askme.page.scss
@@ -1,3 +1,8 @@
+#storiesButton{
+    background-color: darkslategray;
+    display: flex;
+    flex-direction: row;
+}
 .story{
     display: flex;
     border-radius: 25px;
