--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -35,6 +35,10 @@
 }
 #buttonDiv{
   display: flex;
+  position: absolute;
+  bottom:5vh;
+  width : 20vw;
+  left:40vw;
   justify-content: center;
   margin-bottom: 4%;
 }
@@ -49,13 +53,13 @@
 		-webkit-tap-highlight-color: transparent;
 }
 
-button, button:before {
+#button, #button:before {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-button {
+#button {
   position: absolute;
 	width: 150px;
 	height: 50px;
@@ -71,26 +75,39 @@ button {
 	transition: 1s;
 }
 
-button:before {
+#button:before {
 	width: 150px;
 	height: 50px;
-	content: 'Story Creation';
+	content: 'Créer votre histoire !';
 	background: rgba(0,0,0,0.6);
 	border-radius: 25px;
 	position: absolute;
 	transition: 500ms;
 }
 
-button:hover:before {
+#button:hover:before {
 	background: rgba(0,0,0,0);
 	text-shadow: 1px 1px 1px black;
 }
 
-button:hover {
+#button:hover {
 	background-position: center;
 	box-shadow: 0px 0px 10px rgba(232, 218, 26, 0.5);
 }
 
-button:focus {
+#button:focus {
 	outline: none;
+}
+.buttonstory{
+  position: relative;
+  top:80px;
+}
+.buttonstory>button{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 40px;
+  width: 80px;
+  border-radius: 25px;
+  margin-top: 1vh;
 }
