--- a/src/app/askme/askme.page.scss
+++ b/src/app/askme/askme.page.scss
@@ -12,6 +12,9 @@
     margin:1vw;
     padding:1vh;
 }
+.header{
+    background-color:darkslategray ;
+}
 .story>div{
     justify-content: space-between;
     display: flex;
